--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@tanstack/react-query": "^4.22.3",
     "axios": "^1.2.3",
     "gsap": "^3.11.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "wouter": "^2.9.2"
