--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.5",
     "@tanstack/react-query": "^4.22.3",
     "axios": "^1.2.3",
     "gsap": "^3.11.4",
