--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-select": "^5.7.0",
     "wouter": "^2.9.2"
   },
   "devDependencies": {
